XMLWordPrintable

    • 203f9888b (dev), 96e7351dc (6.10)

      Shapes in Lottie can be placed in a tree structure of Groups, each with its own potentially animated transform. This structure is not reflected in the LottieRenderer API that the visitor uses. When there are multiple levels of Groups, the resulting combined transforms can become wrong.

      Example: "Girl taking Selfie.json"

       

        For Gerrit Dashboard: QTBUG-139553
        # Subject Branch Project Status CR V

            qt.team.graphics.and.multimedia Qt Graphics Team
            vgt Eirik Aavitsland
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes